localhost/components/development/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metaphor-slim-development
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`metaphor.<LOCAL_DNS>`)
    services:
    - name: metaphor-slim-development
      port: 80
  tls:
    secretName: metaphor-slim-development-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: development
spec:
  redirectScheme:
    scheme: https
    permanent: true
